[package]
name = "serde_indextree"
version = "0.2.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
description = "Serializing indextree structure."
repository = "https://github.com/PoiScript/serde_indextree"
readme = "README.md"
license = "MIT"
keywords = ["serde", "indextree"]

[dependencies]
indextree = "4.0.0"
serde = { version = "1.0.98", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.40"
